# rhai_dart

./: .gitignore  README.md  analysis_options.yaml  asyncplan.md  dart_test.yaml  pubspec.yaml  test_async_only.dart
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/standards/: README.md  STANDARDS_SUMMARY.md
docs/: ASYNC_FUNCTIONS.md  architecture.md  async_solution_proposal.md  how_to_use_rhai.md  security.md  setup.md  type_conversion.md
example/: 01_simple_execution.dart  02_sync_functions.dart  03_async_functions.dart  04_error_handling.dart  05_configuration.dart  06_complex_workflow.dart  07_variables_and_constants.dart  README.md  async_function_example.dart  engine_lifecycle_example.dart  load_bindings_example.dart  rhai_dart_example.dart
hook/: build.dart
lib/: rhai_dart.dart
lib/src/: analysis_result.dart  engine.dart  engine.dart.bak  engine_config.dart  errors.dart  function_registry.dart  type_conversion.dart
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: async_eval.rs  engine.rs  error.rs  functions.rs  lib.rs  macros.rs  types.rs  values.rs
specs/2025-12-25-rhai-cross-ffi-functions/: RAW_IDEA.md  spec.md  (+3 more)
test/: async_callback_test.dart  async_function_test.dart  engine_lifecycle_test.dart  eval_async_test.dart  ffi_infrastructure_test.dart  function_registration_test.dart  integration_async_test.dart  integration_test.dart  memory_management_test.dart  rhai_dart_test.dart  sandboxing_test.dart  script_analysis_test.dart  script_execution_test.dart  type_conversion_test.dart  variable_test.dart
(+30 files in other folders)
