[package]
name = "rhai_dart"
version = "0.1.0"
edition = "2021"
authors = ["Rhai Dart Contributors"]
description = "Rust FFI bridge for Rhai scripting engine integration with Dart"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
rhai = { version = "1.21", features = ["sync", "serde"] }
libc = "0.2"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
